# Internship

./: README.md
SourceCode/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  manage.py  out.json  pyproject.toml  seed_dass21.py
SourceCode/data/: (NGƯNG) KẾT NỐI.md  5 ĐIỀU KHIẾN BẠN HỐI TIẾC NHẤT VỀ SỰ NGHIỆP CỦA MÌNH.md  AI RỒI CŨNG CHẾT, CHÚNG TA TỐT NHẤT NÊN HỌC CÁCH CHẤP NHẬN ĐIỀU NÀY!.md  Cha mẹ tích cực_ Làm sao để xây dựng 1 mối quan hệ lành mạnh với con cái.md  Chuyển mùa – Chuyển mình_ Giữ vững sức khỏe tinh thần trong công việc.md  HOẠT ĐỘNG CHƠI Ở TRẺ CÓ GÌ HAY.md  HẠNH PHÚC TRONG CÔNG VIỆC_ BÍ QUYẾT TỪ NGHIÊN CỨU KHOA HỌC.md  INTERNET ẢNH HƯỞNG NHƯ THẾ NÀO TỚI TRI NHỚ CỦA CHÚNG TA_.md  Khoa Học Tâm Lý_10271.md  Khoa Học Tâm Lý_10277.md  Khoa Học Tâm Lý_11813.md  Khoa Học Tâm Lý_13359.md  Khoa Học Tâm Lý_1532.md  Khoa Học Tâm Lý_16171.md  Khoa Học Tâm Lý_17771.md  Khoa Học Tâm Lý_18169.md  Khoa Học Tâm Lý_18185.md  Khoa Học Tâm Lý_1941.md  Khoa Học Tâm Lý_2057.md  Khoa Học Tâm Lý_2669.md  Khoa Học Tâm Lý_2741.md  Khoa Học Tâm Lý_4225.md  Khoa Học Tâm Lý_5828.md  Khoa Học Tâm Lý_6073.md  Khoa Học Tâm Lý_6140.md  Khoa Học Tâm Lý_9696.md  LIỆU THỜI GIAN SỬ DỤNG CÁC THIẾT BỊ ĐIỆN TỬ CÓ LIÊN HỆ ĐẾN TRẦM CẢM VÀ TỰ SÁT_.md  LÀM CÁCH NÀO ĐỂ NÂNG CAO Ý CHÍ NHẰM ĐẠT ĐẾN MỤC TIÊU_.md  LỐI SỐNG LÀNH MẠNH CHO SỨC KHOẺ TINH THẦN.md  Nghịch Lý Của Sự Gần Gũi_ Tại Sao Chúng Ta Thường Làm Tổn Thương Những Người Thân Yêu Hơn_.md  NỀN VĂN HÓA NÀO KIỂM SOÁT CẢM XÚC KHUÔN MẶT NHIỀU NHẤT_.md  THÓI QUEN TÍCH TRỮ PHẢN ÁNH ĐIỀU GÌ VỀ CHÚNG TA_.md  (+75 more)
(+75 files in other folders)
